--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@js-temporal/polyfill": "^0.4.3",
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.28",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -21,5 +24,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".eslintrc.js",
+  "author": "",
+  "license": "ISC"
 }
